--- a/index.html
+++ b/index.html
@@ -9,45 +9,158 @@
 </head>
 <body>
     <div class="wrapper">
-        <div class="main">
-            <section class="top">
-                <div class="container">
-
+        <div class="popup">
+            <div class="container">
+                <video>
+                    <source src="https://www.youtube.com/watch?v=yxhTq9s-pbw">
+                </video>
+            </div>
+        </div>
+        <div class="top" id="fullscreen">
+            <div class="container">
+                <div class="row">
+                    <div class="column top__column">
+                        <div class="logo">
+                            <img src="img/logo.png" alt="logo">
+                        </div>
+                        <div class="top__content">
+                            <p class="flag">flag</p>
+                            <h1 class="h1">H1 title with only one or two lines</h1>
+                            <p class="date">Wednesday, Apr. 09</p>
+                        </div>
+                    </div>
+                    <div class="column top__column">
+                        <div class="form">
+                            <form action="#" id="form" class="form__body">
+                                <h2 class="form__title">Register to attend</h1>
+                                <div class="form__item">
+                                    <input id="formName" type="text" class="form__input" placeholder="First name*">
+                                </div>
+                                <div class="form__item">
+                                    <input id="formLName" type="text" class="form__input" placeholder="Last name*">
+                                </div>
+                                <div class="form__item">
+                                    <input id="formEmail" type="email" class="form__input" placeholder="Business email*">
+                                </div>
+                                <div class="form__item">
+                                    <div class="checkbox">
+                                        <input id="formAgreement" type="checkbox" class="checkbox__input">
+                                        <label for="formAgreement" class="checkbox__label">Yes, I want to receive communications about Veeam products, services and events. I can unsubscribe at any time.</label>
+                                    </div>
+                                </div>
+                                <p class="form__agreement">By registering you agree to the <span class="peridot">Veeam Privacy Policy</span>.</p>
+                                <button class="btn_video btn_rounded-corners">Отправить</button>
+                            </form>
+                    </div>
                 </div>
-            </section>
+            </div>
+        </div>
+        <div class="main">
             <section class="partners">
                 <div class="container">
-
+                    <h2 class="h2_center">Our ProPartner Program is designed to help you</h2>
+                    <div class="row">
+                        <div class="column">
+                            <video poster="img/photos/video.jpg">
+                                <source src="https://www.youtube.com/watch?v=yxhTq9s-pbw">
+                            </video>
+                            <p class="comment">Veeam Live Recording</p>
+                        </div>
+                        <div class="column">
+                            <p class="text">Are you challenged by meeting the demands of the Always‑On Enterprise™ and maximizing your organization's investment in the Modern Data Center? If so, join us for a webinar where you'll learn how Veeam® Software and Nutanix’s joint solution can help you achieve:</p>
+                            <ul class="list">
+                                <li>Improve productivity </li>
+                                <li>Create powerful solutions for fast backup and fast restore </li>
+                                <li>Improve efficiency across your business </li>
+                                <li>And more!</li>
+                            </ul>
+                            <p class="text">Learn how organizations like yours can benefit from Cisco and Veeam®.</p>
+                            <div class="row">
+                                <p class="gain">Gain access to innovative learning tools</p>
+                                <button class="btn_video btn_rounded-corners">watch now</button>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </section>
             <section class="experts">
                 <div class="container">
-
+                    <h2 class="h2_left">Learn from Veeam experts</h2>
+                    <div class="row">
+                            <div class="expert">
+                                <div class="expert__portrait">
+                                    <img src="img/photos/spk-1.jpg" alt="Danny Allan" class="portrait__img">
+                                </div>
+                                <div class="expert__caption">
+                                    <p class="expert__name">Danny Allan</p>
+                                    <p class="expert__position">Chief Technology Officer</p>
+                                </div>
+                            </div>
+                            <div class="expert">
+                                <div class="expert__portrait">
+                                    <img src="img/photos/spk-2.jpg" alt="Olivier Robinne" class="portrait__img">
+                                </div>
+                                <div class="expert__caption">
+                                    <p class="expert__name">Olivier Robinne</p>
+                                    <p class="expert__position">Vice President, EMEA</p>
+                                </div>
+                            </div>
+                            <div class="expert">
+                                <div class="expert__portrait">
+                                    <img src="img/photos/spk-3.jpg" alt="Mike Resseler" class="portrait__img">
+                                </div>
+                                <div class="expert__caption">
+                                    <p class="expert__name">Mike Resseler</p>
+                                    <p class="expert__position">Director Product Management</p>
+                                </div>
+                            </div>
+                            <div class="expert">
+                                <div class="expert__portrait">
+                                    <img src="img/photos/spk-4.jpg" alt="Rick Vanover" class="portrait__img">
+                                </div>
+                                <div class="expert__caption">
+                                    <p class="expert__name">Rick Vanover</p>
+                                    <p class="expert__position">Senior Director, Product Strategy</p>
+                                </div>
+                            </div>
+                            <div class="expert">
+                                <div class="expert__portrait">
+                                    <img src="img/photos/spk-5.jpg" alt="Michael Cade" class="portrait__img">
+                                </div>
+                                <div class="expert__caption">
+                                    <p class="expert__name">Michael Cade</p>
+                                    <p class="expert__position">Senior Global Technologist, Product Strategy </p>
+                                </div>
+                            </div>
+                    </div>
                 </div>
             </section>
         </div>
+        <footer class="footer">
+            <div class="container">
+                <div class="row">
+                    <p class="policy">©2021 Veeam® Software | Privacy Policy & Cookies | EULA | Licensing Policy</p>
+                    <ul class="iconbox">
+                        <li class="socicon">
+                            <a class="socicon__link icon-spiceworks" href="#"></a>
+                        </li>
+                        <li class="socicon">
+                            <a class="socicon__link icon-linkedin" href="#"></a>
+                        </li>
+                        <li class="socicon">
+                            <a class="socicon__link icon-facebook" href="#"></a>
+                        </li>
+                        <li class="socicon">
+                            <a class="socicon__link icon-twitter" href="#"></a>
+                        </li>
+                        <li class="socicon">
+                            <a class="socicon__link icon-youtube" href="#"></a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </footer>
     </div>
-    <footer class="footer">
-        <div class="container container_flexbox">
-            <p class="policy">©2021 Veeam® Software | Privacy Policy & Cookies | EULA | Licensing Policy</p>
-            <ul class="iconbox">
-                <li class="socicon">
-                    <a class="icon-spiceworks" href="#"></a>
-                </li>
-                <li class="socicon">
-                    <a class="icon-linkedin" href="#"></a>
-                </li>
-                <li class="socicon">
-                    <a class="icon-facebook" href="#"></a>
-                </li>
-                <li class="socicon">
-                    <a class="icon-twitter" href="#"></a>
-                </li>
-                <li class="socicon">
-                    <a class="icon-youtube" href="#"></a>
-                </li>
-            </ul>
-        </div>
-    </footer>
+    <script src="js/script.js"></script>
 </body>
 </html>
