--- a/index.html
+++ b/index.html
@@ -6,18 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Veeam Software</title>
     <link rel="stylesheet" href="css/style.css">
+    <script src="js/script.js" defer></script>
 </head>
 <body>
     <div class="wrapper">
         <div class="popup">
             <div class="container">
-                <video>
-                    <source src="https://www.youtube.com/watch?v=yxhTq9s-pbw">
+                <video><!--
+                    <source src="https://www.youtube.com/watch?v=yxhTq9s-pbw">-->
                 </video>
             </div>
         </div>
         <div class="top" id="fullscreen">
-            <div class="container">
+            <div class="container top__container">
                 <div class="row">
                     <div class="column top__column">
                         <div class="logo">
@@ -51,6 +52,7 @@
                                 <p class="form__agreement">By registering you agree to the <span class="peridot">Veeam Privacy Policy</span>.</p>
                                 <button class="btn_video btn_rounded-corners">Отправить</button>
                             </form>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -61,8 +63,8 @@
                     <h2 class="h2_center">Our ProPartner Program is designed to help you</h2>
                     <div class="row">
                         <div class="column">
-                            <video poster="img/photos/video.jpg">
-                                <source src="https://www.youtube.com/watch?v=yxhTq9s-pbw">
+                            <video poster="img/photos/video.jpg"><!--
+                                <source src="https://www.youtube.com/watch?v=yxhTq9s-pbw">-->
                             </video>
                             <p class="comment">Veeam Live Recording</p>
                         </div>
@@ -161,6 +163,5 @@
             </div>
         </footer>
     </div>
-    <script src="js/script.js"></script>
 </body>
 </html>
