except top block
video, animation, hover, responsive

should do: top block. dnt know about bg position

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </div>
     <div class="top">
         <div class="top__bg bg">
-            <div class="bg__right"></div>
+            <div class="bg__right" id="bg"></div>
         </div>
         <div class="container container_wrp">
             <div class="row">
@@ -28,7 +28,7 @@
                         <p class="text text_date">Wednesday, Apr. 09</p>
                     </div>
                 </div>
-                <div class="column top__column">
+                <div class="column top__column" id="column">
                     <div class="form">
                         <form action="#" id="form" class="form__body">
                             <h3 class="form__title">Register to attend</h1>
@@ -39,7 +39,7 @@
                                 <input id="formLName" type="text" class="form__input" placeholder="Last name*">
                             </div>
                             <div class="form__item">
-                                <input id="formEmail" type="email" class="form__input" placeholder="Business email*">
+                                <input id="formEmail" type="email" class="form__input _email" placeholder="Business email*">
                             </div>
                             <div class="form__item">
                                 <div class="checkbox">
@@ -94,6 +94,9 @@
                     <h2 class="h2 h2_left experts__h2">Learn from Veeam experts</h2>
                     <div class="row">
                             <div class="expert">
+                                <div class="expert__bg">
+                                    <img src="img/bg/dots-bg-small.png" alt="">
+                                </div>
                                 <div class="portrait">
                                     <div class="portrait__cover">
                                         <img src="img/photos/spk-1.jpg" alt="Danny Allan" class="portrait__img">
@@ -105,6 +108,9 @@
                                 </div>
                             </div>
                             <div class="expert">
+                                <div class="expert__bg">
+                                    <img src="img/bg/dots-bg-small.png" alt="">
+                                </div>
                                 <div class="portrait">
                                     <div class="portrait__cover">
                                         <img src="img/photos/spk-2.jpg" alt="Olivier Robinne" class="portrait__img">
@@ -116,6 +122,9 @@
                                 </div>
                             </div>
                             <div class="expert">
+                                <div class="expert__bg">
+                                    <img src="img/bg/dots-bg-small.png" alt="">
+                                </div>
                                 <div class="portrait">
                                     <div class="portrait__cover">
                                         <img src="img/photos/spk-3.jpg" alt="Mike Resseler" class="portrait__img">
@@ -127,6 +136,9 @@
                                 </div>
                             </div>
                             <div class="expert">
+                                <div class="expert__bg">
+                                    <img src="img/bg/dots-bg-small.png" alt="">
+                                </div>
                                 <div class="portrait">
                                     <div class="portrait__cover">
                                         <img src="img/photos/spk-4.jpg" alt="Rick Vanover" class="portrait__img">
@@ -138,6 +150,9 @@
                                 </div>
                             </div>
                             <div class="expert">
+                                <div class="expert__bg">
+                                    <img src="img/bg/dots-bg-small.png" alt="">
+                                </div>
                                 <div class="portrait">
                                     <div class="portrait__cover">
                                         <img src="img/photos/spk-5.jpg" alt="Michael Cade" class="portrait__img">
